refactor(imports): standardize all imports to use absolute paths with @/
- Replace all relative imports (../, ../../) with absolute imports using @/ prefix
- Update SCSS imports to use @/styles/ instead of relative paths
- Add import path rules to code-convention.mdc with examples
- Update all TypeScript source files (6 files)
- Update all SCSS files (14 files)
- Update all test files (8 files)
- Add violation check for relative imports in code review checklist

--- a/src/presentation/components/skipLink/SkipLink.module.scss
+++ b/src/presentation/components/skipLink/SkipLink.module.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/variables/colors" as *;
-@use "../../../styles/variables/spacing" as *;
-@use "../../../styles/variables/typography" as *;
+@use "@/styles/variables/colors" as *;
+@use "@/styles/variables/spacing" as *;
+@use "@/styles/variables/typography" as *;
 
 .skipLink {
   position: absolute;
