--- a/src/presentation/components/restrictedPage/RestrictedPage.module.scss
+++ b/src/presentation/components/restrictedPage/RestrictedPage.module.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/variables/colors" as *;
-@use "../../../styles/variables/spacing" as *;
-@use "../../../styles/variables/typography" as *;
+@use "@/styles/variables/colors" as *;
+@use "@/styles/variables/spacing" as *;
+@use "@/styles/variables/typography" as *;
 
 .container {
   display: flex;
